# nebula-engine

./: .gitignore  CLAUDE.md  Cargo.toml
.github/workflows/: ci.yml
assets/shaders/: unlit.wgsl
crates/nebula-animation/: Cargo.toml
crates/nebula-app/: Cargo.toml
crates/nebula-app/src/: game_loop.rs  lib.rs  main.rs  platform.rs  window.rs
crates/nebula-assets/: Cargo.toml
crates/nebula-audio/: Cargo.toml
crates/nebula-config/: Cargo.toml
crates/nebula-config/src/: cli.rs  config.rs  error.rs  lib.rs
crates/nebula-coords/: Cargo.toml
crates/nebula-cubesphere/: Cargo.toml
crates/nebula-debug/: Cargo.toml
crates/nebula-debug/src/: lib.rs  server.rs  tests.rs
crates/nebula-demo/: Cargo.toml
crates/nebula-demo/src/: cubesphere_demos.rs  main.rs
crates/nebula-ecs/: Cargo.toml
crates/nebula-editor/: Cargo.toml
crates/nebula-game/: Cargo.toml
crates/nebula-game/src/: hud.rs  main.rs  planet.rs  ship.rs
crates/nebula-input/: Cargo.toml
crates/nebula-input/src/: action_map.rs  gamepad.rs  input_context.rs  keybindings.rs  keyboard.rs  lib.rs  mouse.rs
crates/nebula-lighting/: Cargo.toml
crates/nebula-lod/: Cargo.toml
crates/nebula-log/: Cargo.toml
crates/nebula-log/src/: lib.rs
crates/nebula-materials/: Cargo.toml
crates/nebula-materials/src/: animator.rs  atlas.rs  blending.rs  lib.rs  material.rs  registry.rs
crates/nebula-math/: Cargo.toml
crates/nebula-mesh/: Cargo.toml
crates/nebula-mesh/src/: ambient_occlusion.rs  async_mesh.rs  chunk_mesh.rs  displacement.rs  face_direction.rs  greedy.rs  invalidation.rs  lib.rs  lod_meshing.rs  lod_stitching.rs  neighborhood.rs  packed.rs  transition_seams.rs  vertex_format.rs  visibility.rs  visible_faces.rs
crates/nebula-multiplayer/: Cargo.toml
crates/nebula-multiplayer/src/: authority.rs  budget.rs  chat.rs  chunk_streaming.rs  clock.rs  interest.rs  lib.rs  player_session.rs  prediction.rs  reconciliation.rs  replication.rs  replication_tests.rs  snapshot.rs  voxel_edit.rs
crates/nebula-net/: Cargo.toml
crates/nebula-net/src/: bandwidth.rs  compression.rs  diagnostics.rs  framing.rs  lib.rs  messages.rs  platform.rs  reconnection.rs  routing.rs  session.rs  tcp_client.rs  tcp_server.rs
crates/nebula-particles/: Cargo.toml
crates/nebula-physics/: Cargo.toml
crates/nebula-physics/src/: collider_lifecycle.rs  collider_lifecycle_tests.rs  gravity.rs  lib.rs  physics_bridge.rs  physics_debug.rs  physics_debug_tests.rs  physics_island.rs  physics_region.rs  physics_region_tests.rs  player_physics.rs  voxel_collision.rs  voxel_raycast.rs  zero_gravity.rs
crates/nebula-planet/: Cargo.toml
crates/nebula-planet/src/: culling.rs  day_night.rs  lib.rs  origin.rs  planetary_coord.rs  single_face.rs  six_face.rs  transition.rs
crates/nebula-planet/src/atmosphere/: atmosphere.wgsl  mod.rs  renderer.rs  scatter.rs
crates/nebula-planet/src/impostor/: impostor.wgsl  mod.rs  pipeline.rs
crates/nebula-planet/src/ocean/: mod.rs  ocean.wgsl  renderer.rs
crates/nebula-planet/src/orbital/: mesh.rs  mod.rs  orbital.wgsl  pipeline.rs  texture.rs
crates/nebula-player/: Cargo.toml
crates/nebula-player/src/: camera_transition.rs  first_person_camera.rs  floating_origin.rs  free_fly_camera.rs  gravity_oriented_camera.rs  lib.rs  spaceship_controller.rs  third_person_camera.rs
crates/nebula-render/: Cargo.toml
crates/nebula-render/src/: batching.rs  bloom.rs  buffer.rs  camera.rs  depth.rs  frustum.rs  gpu.rs  gpu_buffer_pool.rs  gpu_chunk_mesh.rs  lens_flare.rs  lib.rs  lit_pipeline.rs  pass.rs  pbr_voxel.wgsl  pbr_voxel_pipeline.rs  pipeline.rs  shader.rs  shadow_pipeline.rs  surface.rs  texture.rs  textured_pipeline.rs
crates/nebula-scene/: Cargo.toml
crates/nebula-scripting/: Cargo.toml
crates/nebula-server/: Cargo.toml
crates/nebula-space/: Cargo.toml
crates/nebula-space/src/: lib.rs  nebula.rs  skybox.rs  starfield.rs  sun.rs
crates/nebula-space/src/planet_impostor/: mod.rs  orbital.rs  renderer.rs
crates/nebula-terrain/: Cargo.toml
crates/nebula-terrain/src/: async_generation.rs  biome.rs  cave.rs  debug_viz.rs  feature.rs  heightmap.rs  lib.rs  ore.rs  seed.rs  terrain_height.rs
crates/nebula-terrain/src/biome/: def.rs  diagram.rs  registry.rs  sampler.rs
crates/nebula-terrain/src/debug_viz/: image.rs  renderers.rs
crates/nebula-ui/: Cargo.toml
crates/nebula-voxel/: Cargo.toml
plans/: README.md
plans/01_setup/: 01_workspace_and_crate_structure.md  02_ci_pipeline.md  03_cross_platform_build_validation.md  04_spawn_window.md  05_wgpu_device_initialization.md  06_main_game_loop_with_fixed_timestep.md  07_configuration_system.md  08_logging_and_tracing.md  09_ai_debug_api.md
plans/02_math/: 01_world_position_type_i128.md  02_i128_vector_types.md  03_vector_arithmetic.md  04_distance_and_magnitude.md  05_fixed_point_type.md  06_local_position_f32.md  07_world_to_local_conversion.md  08_aabb_128bit.md  09_unit_conversions.md  10_i128_performance_benchmarks.md
plans/03_coords/: 01_coordinate_space_hierarchy.md  02_sector_coordinates.md  03_coordinate_frame_transitions.md  04_spatial_hash_for_entity_lookup.md  05_frustum_in_128bit_space.md
plans/04_rendering/: 01_wgpu_device_queue_surface.md  02_render_pass_abstraction.md  03_vertex_index_buffer_management.md  04_shader_module_loading.md  05_basic_unlit_pipeline.md  06_camera_projection_view.md  07_depth_buffer.md  08_gpu_texture_management.md  09_basic_frustum_culling.md  10_draw_call_batching.md  11_cross_platform_surface_handling.md
plans/05_cubesphere/: 01_cube_face_enum_and_local_coords.md  02_cube_to_sphere_projection.md  03_sphere_to_cube_inverse.md  04_chunk_address_type.md  05_quadtree_subdivision.md  06_same_face_neighbor_finding.md  07_cross_face_neighbor_finding.md  08_cross_face_corner_cases.md  09_chunk_bounding_volumes.md  10_face_uv_to_world_position.md  11_planet_definition.md  12_winding_order_consistency.md
plans/06_voxel/: 01_voxel_type_registry.md  02_palette_compressed_chunk.md  03_voxel_get_set_api.md  04_chunk_manager.md  05_chunk_serialization.md  06_dirty_tracking.md  (+5 more)
(+318 files in other folders)
