[workspace]
resolver = "2"
members = [
    "crates/nebula-app",
    "crates/nebula-server",
    "crates/nebula-demo",
    "crates/nebula-math",
    "crates/nebula-coords",
    "crates/nebula-render",
    "crates/nebula-cubesphere",
    "crates/nebula-voxel",
    "crates/nebula-mesh",
    "crates/nebula-ecs",
    "crates/nebula-terrain",
    "crates/nebula-lod",
    "crates/nebula-planet",
    "crates/nebula-space",
    "crates/nebula-lighting",
    "crates/nebula-materials",
    "crates/nebula-input",
    "crates/nebula-player",
    "crates/nebula-physics",
    "crates/nebula-net",
    "crates/nebula-multiplayer",
    "crates/nebula-audio",
    "crates/nebula-assets",
    "crates/nebula-ui",
    "crates/nebula-particles",
    "crates/nebula-animation",
    "crates/nebula-scripting",
    "crates/nebula-scene",
    "crates/nebula-editor",
    "crates/nebula-debug",
    "crates/nebula-config",
    "crates/nebula-log",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
dirs = "6"
log = "0.4"
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiny_http = "0.12"
wgpu = "28.0"
winit = "0.30"
bytemuck = { version = "1.21", features = ["derive"] }
glam = "0.29"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
static_assertions = "1.1"
rustc-hash = "2.1"
crossbeam-channel = "0.5"
dashmap = "6.1"
num_cpus = "1.16"
bevy_ecs = "0.15"
png = "0.17"
noise = "0.9"
