[package]
name = "nebula-app"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
bytemuck = { workspace = true }
dirs = { workspace = true }
glam = { workspace = true }
tracing = "0.1"
nebula-config = { path = "../nebula-config" }
nebula-debug = { path = "../nebula-debug" }
nebula-cubesphere = { path = "../nebula-cubesphere" }
nebula-lod = { path = "../nebula-lod" }
nebula-planet = { path = "../nebula-planet" }
nebula-render = { path = "../nebula-render" }
nebula-space = { path = "../nebula-space" }
png = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
