[package]
name = "nebula-config"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = { workspace = true }
log = { workspace = true }
ron = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
