[package]
name = "nebula-debug"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tiny_http = { workspace = true }
png = { workspace = true }

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
