[package]
name = "nebula-demo"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = { workspace = true }
tracing = "0.1"
nebula-app = { path = "../nebula-app" }
nebula-config = { path = "../nebula-config" }
nebula-log = { path = "../nebula-log" }
