[package]
name = "nebula-demo"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = { workspace = true }
tracing = "0.1"
rand = "0.8"
rand_xoshiro = "0.6"
nebula-app = { path = "../nebula-app" }
nebula-input = { path = "../nebula-input" }
nebula-config = { path = "../nebula-config" }
nebula-coords = { path = "../nebula-coords" }
nebula-log = { path = "../nebula-log" }
nebula-render = { path = "../nebula-render" }
bytemuck = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
nebula-cubesphere = { path = "../nebula-cubesphere" }
nebula-voxel = { path = "../nebula-voxel" }
nebula-mesh = { path = "../nebula-mesh" }
nebula-ecs = { path = "../nebula-ecs" }
nebula-terrain = { path = "../nebula-terrain" }
nebula-lod = { path = "../nebula-lod" }
nebula-planet = { path = "../nebula-planet" }
bevy_ecs = { workspace = true }
hashbrown = "0.15"
