[package]
name = "nebula-input"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
dirs = { workspace = true }
gilrs = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
tracing = "0.1"
