[package]
name = "nebula-log"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
nebula-config = { path = "../nebula-config" }

[dev-dependencies]
serde_json = "1"
tempfile = "3"