[package]
name = "nebula-materials"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
ron = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
