[package]
name = "nebula-mesh"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
nebula-voxel = { path = "../nebula-voxel" }
nebula-cubesphere = { path = "../nebula-cubesphere" }
glam = { workspace = true }
bytemuck = { workspace = true }
static_assertions = { workspace = true }
crossbeam-channel = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
