[package]
name = "nebula-multiplayer"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
serde = { workspace = true }
postcard = { version = "1", features = ["alloc"] }
thiserror = { workspace = true }
tracing = "0.1"
lz4_flex = "0.11"

[dev-dependencies]
serde_json = { workspace = true }
