[package]
name = "nebula-net"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.49", features = ["net", "rt-multi-thread", "io-util", "macros", "sync", "time"] }
thiserror = "2.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1", features = ["alloc"] }
lz4_flex = "0.11"
