[package]
name = "nebula-physics"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rapier3d = "0.32"
bevy_ecs = { workspace = true }
glam = { workspace = true }
nebula-math = { path = "../nebula-math" }
nebula-voxel = { path = "../nebula-voxel" }
tracing = "0.1"
rustc-hash = "2"
