[package]
name = "nebula-planet"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
bytemuck = { workspace = true }
wgpu = { workspace = true }
nebula-coords = { path = "../nebula-coords" }
nebula-cubesphere = { path = "../nebula-cubesphere" }
nebula-math = { path = "../nebula-math" }
nebula-mesh = { path = "../nebula-mesh" }
nebula-render = { path = "../nebula-render" }
nebula-terrain = { path = "../nebula-terrain" }
nebula-voxel = { path = "../nebula-voxel" }
tracing = "0.1"
