[package]
name = "nebula-terrain"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
noise = "0.9"
glam = { workspace = true }
nebula-voxel = { path = "../nebula-voxel" }
nebula-cubesphere = { path = "../nebula-cubesphere" }
hashbrown = "0.15"
thiserror = { workspace = true }
rand = "0.9"
rand_chacha = "0.9"
